<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bg"
    android:background="@drawable/login_bg2">

    <ImageView
        android:layout_width ="wrap_content"
        android:layout_height ="wrap_content"
        android:contentDescription="@string/app_name"
        android:id="@+id/image1"
        android:layout_centerVertical="true"
        android:background ="@drawable/login_info" />

    <LinearLayout
        android:id="@+id/rl"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_marginTop="320dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_input"
        android:visibility="invisible"

        >

        <LinearLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loging_activity_etHeight"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="stereo"
                android:hint="@string/input_user_name"
                style="@style/etStyle1"

                />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/login_line"
                android:alpha="0.6"
                />

            <!--android:drawableLeft="@drawable/user_ico"-->
            <!--android:drawableLeft="@drawable/password_ico"-->
            <!--android:drawableLeft="@drawable/verfy_ico"-->

            <EditText
                android:id="@+id/etPwd"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loging_activity_etHeight"
                android:gravity="center_vertical"
                android:hint="@string/input_user_password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                style="@style/etStyle1"
                android:text="suypower"
                />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/login_line"
                android:alpha="0.6"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/etVerifyCode"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/loging_activity_etHeight"
                    android:layout_weight="1"
                    android:gravity="center_vertical"

                    android:hint="@string/input_msg_verify_code"
                    android:maxLength="4"
                    android:paddingLeft="5dp"
                    style="@style/etStyle1"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/btnVerifyCode"
                    />


                <Button
                    android:id="@+id/btnVerifyCode"
                    android:layout_width="@dimen/loging_activity_verifyCodeWidth"
                    android:layout_height="@dimen/loging_activity_etHeight"
                    android:layout_marginLeft="5dip"
                    android:background="@color/transparent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="3dp"
                    />

                <ProgressBar
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_alignLeft="@+id/btnVerifyCode"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:visibility="invisible"
                    android:id="@+id/pbar"
                    android:layout_marginRight="3dp"
                    />
            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="420dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/loginbtntext"
        android:textColor="@color/blackTransparentA"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rl"
        android:visibility="invisible"
        android:background="@drawable/button_style_1"/>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />



    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="V1.0"
        android:textSize="14dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:id="@+id/ver"

        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="技术支持：江苏苏源高科技有限公司"
        android:textSize="14dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"

        />
</RelativeLayout>